infrastructure/monitoring/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - grafana.${DOMAIN}
  gateways:
    - istio-ingress/gateway
  http:
    - route:
        - destination:
            host: kube-prometheus-stack-grafana
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
    - prometheus.${DOMAIN}
  gateways:
    - istio-ingress/gateway
  http:
    - route:
        - destination:
            host: kube-prometheus-stack-prometheus
            port:
              number: 9090
